fixed alignment

--- a/client/src/components/css/service-list.module.css
+++ b/client/src/components/css/service-list.module.css
@@ -27,6 +27,15 @@
     padding-left: 10px;
     padding-right: 10px;
 }
+.directory li{
+    float: left;
+    margin-right: 10px;
+    text-decoration:none; 
+}
+.directory a{
+    color: inherit;
+    text-decoration: none;
+}
 
 .mainContainer li{
     list-style: none;
